--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
   <meta charset="utf-8">
    <title>welcome</title>
-       
+         <link rel="stylesheet" href="style.css"/>  
   </head>
   <body>
     <h1><b>NELESEH S. DUO “NELL”</b>/<b> B:</b>612-470-3927<b>, C:</b>651-285-3360/ <b>Email:</b><i>dzcsempower@gmail.com</i></h1>
